--- a/index.html
+++ b/index.html
@@ -35,30 +35,37 @@
         margin: 5px 2px;
     }
     .about{
-        font-size: 14px;
+        font-size: 20px;
         margin-bottom: 10px;
+        font-family: "Roboto Condensed", sans-serif;
     }
     .info {
         font-size: 15px;
         margin: 5px 0;
+        font-family: font-family: "Lora", serif;;
     }
 </style>
 <body>
     <div class="main">
         <div class="card">
-            <img src="profile.jpeg" alt="profile img">
-            <h1>John Doe</h1>
-            <p class="about">Web Developer</p>
-            <p class="info">Portfolio</p>
-            <p class="info"> Location: Earth</p>
+            <img src="shinchan.jpg" alt="profile img">
+            <h1>SHINCHAN</h1>
+            
+            <p class="about"><strong>Portfolio</strong></p>
+            <p class="info"><strong>Age: </strong>5 year old</p>
+            <p class="info"><strong>Location:</strong>  Kasukabe</p>
+            <p class="info"><strong>Fav dog:</strong> Shero</p>
+            <p class="info"><strong>Best friend:</strong> Kazama</p>
             <form action="#">
                 <input type="text" name="Name" placeholder="Your Name"><br><br>
                 <textarea name="msg" placeholder="Message"></textarea><br><br>
                 <input type="submit" value="Submit">
+                
             </form>
             <br>
             <a href="#">Visit Profile</a>
         </div>
     </div>
 </body>
+
 </html>
